--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@erez111/web-assets-aggregator",
   "description": "Set of tools for handling web assets aggregation (with compilation, minify, obfuscate) for typescript/javascript and scss/css files",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/src/cli.js",
   "author": "Erez Narotzki",
   "license": "BSD2-Clause",
@@ -10,7 +10,9 @@
     "postbuild": "copyfiles src/shell/* dist/",
     "dev": "concurrently \"nodemon\" \"nodemon",
     "generate_js": "sh dist/src/shell/ts_js_aggregate_and_obfuscate.sh",
-    "generate_css": "sh dist/src/shell/scss_css_aggregate_compile_and_minify.sh"
+    "generate_css": "sh dist/src/shell/scss_css_aggregate_compile_and_minify.sh",
+    "prepublish": "npm run build",
+    "publish": "npm publish --access public"
   },
   "bin": {
     "web-assets-aggregator": "dist/src/cli.js"
